adjusting class labels

--- a/bert_sequentialclassifier_sentiment_analysis.ipynb
+++ b/bert_sequentialclassifier_sentiment_analysis.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPY/I7NkFSHhsdHdwa+3dHe"
+      "authorship_tag": "ABX9TyNYSt1YtoMD8fxZsOJ88cPY"
     },
     "kernelspec": {
       "name": "python3",
@@ -5193,26 +5193,13 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd gdrive/MyDrive/Colab Notebooks/cariad-predev-ai-engineer-tech-challenge_Sivahari-develop"
+        "%cd gdrive/MyDrive/Colab Notebooks/carrev"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WPKq4P3F8xPJ",
-        "outputId": "9265b9a6-ce2b-4059-97e9-7a415cbfba0a"
+        "id": "WPKq4P3F8xPJ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[Errno 2] No such file or directory: 'gdrive/MyDrive/Colab Notebooks/cariad-predev-ai-engineer-tech-challenge_Sivahari-develop'\n",
-            "/content/gdrive/MyDrive/Colab Notebooks/cariad-predev-ai-engineer-tech-challenge_Sivahari-develop\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
